--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nascent-nebula",
+  "homepage": "https://omaquu.github.io/vibe-visualizer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
