--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nascent-nebula",
+  "name": "vibe-visualizer",
   "homepage": "https://omaquu.github.io/vibe-visualizer",
   "private": true,
   "version": "0.0.0",
@@ -13,6 +13,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
